--- a/article/biblio.bib
+++ b/article/biblio.bib
@@ -225,3 +225,24 @@
   booktitle = {International Conference on Learning Representations},
   year      = {2021}
 }
+% MaxSAT Solvers
+
+@article{ignatiev2019rc2,
+  title     = {{RC2}: An Efficient {MaxSAT} Solver},
+  author    = {Ignatiev, Alexey and Morgado, Antonio and Marques-Silva, Joao},
+  journal   = {Journal on Satisfiability, Boolean Modeling and Computation},
+  volume    = {11},
+  number    = {1},
+  pages     = {53--64},
+  year      = {2019},
+  publisher = {IOS Press},
+  doi       = {10.3233/SAT190116}
+}
+
+@inproceedings{audemard2009glucose,
+  title     = {Predicting Learnt Clauses Quality in Modern {SAT} Solvers},
+  author    = {Audemard, Gilles and Simon, Laurent},
+  booktitle = {Proceedings of the 21st International Joint Conference on Artificial Intelligence (IJCAI)},
+  pages     = {399--404},
+  year      = {2009}
+}
