--- a/article/main_text.tex
+++ b/article/main_text.tex
@@ -4,12 +4,9 @@ We propose a neuro-symbolic framework for logical reasoning over long-form docum
 
 \section{Introduction}
 
-Given a long document—a medical guideline, a legal contract, a technical
-specification—users need to ask questions, check consistency, and understand
-what follows from what. Large language models (LLMs) offer fluent interfaces
-but struggle with such reasoning: they hallucinate facts \cite{ji2023hallucination},
-miss information in long contexts \cite{liu2024lost}, and cannot guarantee
-faithful inference \cite{pan2023logiclm}.
+Given a long document---a medical guideline, a legal contract, a technical specification---users need to ask questions, check consistency, and determine whether a given query is entailed, contradicted, or undetermined by the document. 
+Large language models (LLMs) offer fluent interfaces but struggle with such reasoning.
+They hallucinate facts \cite{ji2023hallucination}, preferring external knowledge instead of the input document; miss information in long contexts \cite{liu2024lost}, prioritizing the start and end of inputs but neglecting the middle; and cannot guarantee faithful inference \cite{pan2023logiclm}, producing plausible but logically unsound conclusions.
 
 A common mitigation is retrieval-augmented generation (RAG), where relevant
 passages are retrieved and fed to an LLM at query time. But when logical
