--- a/article/biblio.bib
+++ b/article/biblio.bib
@@ -47,6 +47,8 @@
 
 % LLM limitations - hallucination and long context
 
+% LLM limitations - hallucination and long context
+
 @article{ji2023hallucination,
   title     = {Survey of Hallucination in Natural Language Generation},
   author    = {Ji, Ziwei and Lee, Nayeon and Frieske, Rita and Yu, Tiezheng and Su, Dan and Xu, Yan and Ishii, Etsuko and Bang, Ye Jin and Madotto, Andrea and Fung, Pascale},
@@ -69,6 +71,16 @@
   publisher = {MIT Press},
   doi       = {10.1162/tacl_a_00638}
 }
+
+@inproceedings{wei2022chain,
+  title     = {Chain-of-Thought Prompting Elicits Reasoning in Large Language Models},
+  author    = {Wei, Jason and Wang, Xuezhi and Schuurmans, Dale and Bosma, Maarten and Ichter, Brian and Xia, Fei and Chi, Ed and Le, Quoc and Zhou, Denny},
+  booktitle = {Advances in Neural Information Processing Systems},
+  volume    = {35},
+  pages     = {24824--24837},
+  year      = {2022}
+}
+
 
 % New entries - Main references
 
