--- a/article/biblio.bib
+++ b/article/biblio.bib
@@ -82,6 +82,16 @@
 }
 
 
+% Neuro-symbolic surveys
+
+@inproceedings{yang2025neurosymbolic,
+  title     = {Neuro-Symbolic Artificial Intelligence: Towards Improving the Reasoning Abilities of Large Language Models},
+  author    = {Yang, Xiao-Wen and Shao, Jie-Jing and Guo, Lan-Zhe and Zhang, Bo-Wen and Zhou, Zhi and Jia, Lin-Han and Dai, Wang-Zhou and Li, Yu-Feng},
+  booktitle = {Proceedings of the 34th International Joint Conference on Artificial Intelligence (IJCAI), Survey Track},
+  year      = {2025},
+  note      = {arXiv:2508.13678}
+}
+
 % New entries - Main references
 
 @inproceedings{pan2023logiclm,
