--- a/article/biblio.bib
+++ b/article/biblio.bib
@@ -175,6 +175,16 @@
 
 % Tool-augmented LLMs
 
+@inproceedings{liu2024lot,
+  title     = {Logic-of-Thought: Injecting Logic into Contexts for Full Reasoning in Large Language Models},
+  author    = {Liu, Tongxuan and Xu, Wenjiang and Huang, Weizhe and Wang, Xingyu and Wang, Jiaxing and Yang, Hailong and Li, Jing},
+  booktitle = {Proceedings of the 2025 Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics (NAACL)},
+  pages     = {9238--9262},
+  year      = {2025},
+  publisher = {Association for Computational Linguistics},
+  doi       = {10.18653/v1/2025.naacl-long.510}
+}
+
 @inproceedings{gao2023pal,
   title     = {{PAL}: Program-aided Language Models},
   author    = {Gao, Luyu and Madaan, Aman and Zhou, Shuyan and Alon, Uri and Liu, Pengfei and Yang, Yiming and Callan, Jamie and Neubig, Graham},
