--- a/article/main_text.tex
+++ b/article/main_text.tex
@@ -54,7 +54,7 @@ We use Boolean polynomial rings, computable via tools like PolyBoRi
 assumption-based truth maintenance system (ATMS) \cite{deKleer1986} compactly 
 represents multiple consistent assignments under evolving constraints—conceptually 
 parallel to our notion of ring homomorphisms $\phi: R(T) \to \mathbb{F}_2$ 
-as a connsistent assignment.
+as a consistent assignment.
 
 \paragraph{Weighted reasoning and model counting.}
 When soft constraints carry confidences, we connect to weighted Max-SAT 
